--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- Material CDN Google-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Style Css Here -->
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="./css/index.css"/>
+    <link rel="stylesheet" href="./css/responsive.css" />
 </head>
 <body>
     <div class="container">
@@ -18,7 +18,7 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                    <img src="../images/logo.png" alt="" />
+                    <img src="./images/logo.png" alt="" />
                     <h2>Saud <span class="danger">USD</span> </h2>
                 </div>
                 <div class="close" id="close_btn">
@@ -205,7 +205,7 @@
                         <small class="text_muted">User</small>
                     </div>
                     <div class="porfile_photo">
-                        <img src="../images/user.jpg" alt="">
+                        <img src="./images/user.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                 <div class="news_updates">
                     <div class="update">
                         <div class="porfile_photo">
-                            <img src="../images/user.jpg" alt="" />
+                            <img src="./images/user.jpg" alt="" />
                         </div>
                         <div class="message">
                             <p><b>Ahmed</b> received his order of</p>
@@ -231,7 +231,7 @@
                 <div class="alert_update">
                     <div class="update">
                         <div class="porfile_photo">
-                            <img src="../images/user.jpg" alt="" />
+                            <img src="./images/user.jpg" alt="" />
                         </div>
                         <div class="message">
                             <p><b>Ahmed</b> received his order of</p>
@@ -250,6 +250,6 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <!-- My Script -->
-    <script src="../js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
