--- a/educations.html
+++ b/educations.html
@@ -8,9 +8,9 @@
     <!-- Material CDN Google-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Style Css Here -->
-    <link rel="stylesheet" href="../css/index.css"/>
-    <link rel="stylesheet" href="../css/educations.css" />
-    <link rel="stylesheet" href="../css/responsive.css" />
+    <link rel="stylesheet" href="./css/index.css"/>
+    <link rel="stylesheet" href="./css/educations.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
 </head>
 <body>
     <div class="container">
@@ -19,7 +19,7 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                    <img src="../images/logo.png" alt="" />
+                    <img src="./images/logo.png" alt="" />
                     <h2>Saud <span class="danger">USD</span> </h2>
                 </div>
                 <div class="close" id="close_btn">
@@ -101,7 +101,7 @@
                                 <span class="overlay"></span>
 
                                 <div class="card-video">
-                                    <video src="../video/video-1.mp4" alt="video" class="card-vid" muted></video>
+                                    <video src="./video/video-1.mp4" alt="video" class="card-vid" muted></video>
                                 </div>
                             </div>
 
@@ -116,7 +116,7 @@
                                 <span class="overlay"></span>
 
                                 <div class="card-video">
-                                    <video src="../video/video-2.mp4" alt="video" class="card-vid" muted></video>
+                                    <video src="./video/video-2.mp4" alt="video" class="card-vid" muted></video>
                                 </div>
                             </div>
 
@@ -131,7 +131,7 @@
                                 <span class="overlay"></span>
 
                                 <div class="card-video">
-                                    <video src="../video/video-3.mp4" alt="video" class="card-vid" muted></video>
+                                    <video src="./video/video-3.mp4" alt="video" class="card-vid" muted></video>
                                 </div>
                             </div>
 
@@ -146,7 +146,7 @@
                                 <span class="overlay"></span>
 
                                 <div class="card-video">
-                                    <video src="../video/video-4.mp4" alt="video" class="card-vid" muted></video>
+                                    <video src="./video/video-4.mp4" alt="video" class="card-vid" muted></video>
                                 </div>
                             </div>
 
@@ -161,7 +161,7 @@
                                 <span class="overlay"></span>
 
                                 <div class="card-video">
-                                    <video src="../video/video-5.mp4" alt="video" class="card-vid" muted></video>
+                                    <video src="./video/video-5.mp4" alt="video" class="card-vid" muted></video>
                                 </div>
                             </div>
 
@@ -176,7 +176,7 @@
                                 <span class="overlay"></span>
 
                                 <div class="card-video">
-                                    <video src="../video/video-6.mp4" alt="video" class="card-vid" muted></video>
+                                    <video src="./video/video-6.mp4" alt="video" class="card-vid" muted></video>
                                 </div>
                             </div>
 
@@ -192,7 +192,7 @@
 
             <div class="popup-video">
                 <span>&times;</span>
-                <video src="../video/video-1.mp4" muted autoplay controls></video>
+                <video src="./video/video-1.mp4" muted autoplay controls></video>
             </div>
 
         </main>
@@ -215,7 +215,7 @@
                         <small class="text_muted">User</small>
                     </div>
                     <div class="porfile_photo">
-                        <img src="../images/user.jpg" alt="">
+                        <img src="./images/user.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -231,7 +231,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <!-- My Script -->
-    <script src="../js/index.js"></script>
-    <script src="../js/educations.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/educations.js"></script>
 </body>
 </html>
